--- a/public/modern.css
+++ b/public/modern.css
@@ -7,10 +7,28 @@ h1 {
   letter-spacing: 3px;
 }
 
+#nickname-container {
+  text-align: center;
+  margin-top: 10px;
+}
+
+#nickname-form {
+  display: inline-block;
+}
+
+#nickname-input {
+  padding: 5px;
+  margin-right: 5px;
+}
+
+#send-button {
+  margin-top: 10px;
+}
+
 #chat-container {
   max-width: 820px;
   margin: 0 auto;
-  margin-top: -40px;
+  margin-top: -20px;
   padding: 30px;
   background-color: #000000;
   border: 2px solid #00ffcc;
