--- a/public/vintage.css
+++ b/public/vintage.css
@@ -13,6 +13,24 @@ h1 {
   margin-bottom: 20px;
 }
 
+#nickname-container {
+  text-align: center;
+  margin-top: 20px;
+}
+
+#nickname-form {
+  display: inline-block;
+}
+
+#nickname-input {
+  padding: 5px;
+  margin-right: 5px;
+}
+
+#send-button {
+  margin-top: 10px;
+}
+
 #chat-container {
   background-color: #ffffff;
   border: 1px solid #cccccc;
