--- a/public/default.css
+++ b/public/default.css
@@ -79,3 +79,41 @@ h3 {
   font-size: 16px;
   /* Weitere Stileigenschaften für den Nachrichteninhalt */
 }
+
+#popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#popup-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+#popup-content h2 {
+  margin-bottom: 10px;
+}
+
+#popup-content input {
+  margin-bottom: 10px;
+  padding: 5px;
+  width: 200px;
+}
+
+#popup-content button {
+  padding: 5px 10px;
+}
+
+#login-error-message {
+  color: red;
+  margin-top: 10px;
+}
